crates/turborepo/tests/snapshots/prune_test__prune_docker_out_top_level.snap
---
source: crates/turborepo/tests/prune_test.rs
expression: "ls_dir(&out).join(\"\\n\")"
---
full
json
pnpm-lock.yaml
pnpm-workspace.yaml
