crates/turborepo/tests/snapshots/prune_test__prune_docker_retained_packages.snap
---
source: crates/turborepo/tests/prune_test.rs
assertion_line: 1255
expression: "prune_retained_packages(&stdout).join(\"\\n\")"
---
shared
util
web
