crates/turborepo/tests/snapshots/prune_test__prune_standard_retained_packages.snap
---
source: crates/turborepo/tests/prune_test.rs
expression: "prune_retained_packages(&stdout).join(\"\\n\")"
---
shared
util
web
